--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
 }
 
 body {
-  height: 100vh;
+  height: 100dvh;
   display: flex;
   justify-content: center;
   flex-direction: column;
@@ -13,12 +13,12 @@ body {
 
 #editor {
   width: 100vw;
-  height: 70vh;
+  height: 70dvh;
 }
 
 .output {
   width: 100%;
-  height: 30vh;
+  height: 30dvh;
   background-color: #333;
   padding: 20px 40px;
   color: white;
