--- a/css/style.css
+++ b/css/style.css
@@ -13,8 +13,19 @@ body {
 }
 
 #editor {
-  width: 100vw;
-  height: 70vh;
+  width: 60vw;
+  height: 65.8vh;
+}
+
+.code_editor_wrapper {
+  display: flex;
+}
+
+.question {
+  height: 100vh;
+  width: 40vw;
+  background: #2f2f2f;
+  padding: 40px 30px;
 }
 
 .output {
